@@ -117,12 +117,14 @@ package System.Partition_Interface is
      (Rsh_Command  : in String;
       Name_Is_Host : in Boolean;
       General_Name : in String;
+      Rsh_Options  : in String;
       Command_Line : in String);
-   --  General_Name represents the name of the machine or the name of the
-   --  partition (depending on the value of Name_Is_Host). Command_Line
-   --  holds the extra options that will be given on the command line.
-   --  Rsh_Command is typically "rsh", that will be used to launch the
-   --  other partition.
+   --  General_Name represents the name of the machine or the name of
+   --  the partition (depending on the value of
+   --  Name_Is_Host). Command_Line holds the extra options that will
+   --  be given on the command line.  Rsh_Command is typically "rsh",
+   --  that will be used to launch the other partition. Rsh_Options is
+   --  an command line argument for Rsh_Command.
 
    procedure Raise_Program_Error_For_E_4_18;
    --  Raise Program_Error with an error message explaining why it has been
